UI small upd, yarn.lock added

--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -34,7 +34,7 @@
       <h1 class="title">PIXcollector</h1>
     </div>
     <div class="description">
-      <span>Successfully authorized! <br>Transition to stock...</span>
+      <span>Successfully authorized! <br>Transition to stocks...</span>
     </div>
 <!--    <div class="button login" [routerLink]="['/stocks']">-->
 <!--      <div class="btn-label">I can't wait!</div>-->
