api user get rework

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -110,12 +110,12 @@
   </div>
 
   <div class="main privacy" *ngIf="private">
-    <div class="pr pr-nobody" *ngIf="stockUser.privacyVisible === 3">
+    <div class="pr pr-nobody" *ngIf="privacyVisible === 3">
       <div class="icon-lock"></div>
       <div class="alert">Private page, sorry.</div>
     </div>
 
-    <div class="pr pr-authorized" *ngIf="stockUser.privacyVisible === 2">
+    <div class="pr pr-authorized" *ngIf="privacyVisible === 2">
       <div class="icon-lock"></div>
       <div class="alert">Authorize to view this content.</div>
       <div class="button login" [routerLink]="['/auth']">
