api user get rework

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -1,6 +1,10 @@
 <div class="stock-wrapper">
   <app-header></app-header>
 
+  <div class="main loader" *ngIf="loader">
+    <span>Loading...</span>
+  </div>
+
   <div class="main" *ngIf="stockUser && !private">
     <div class="user-info" *ngIf="stockUser">
       <div class="user-info-avatar">
