--- a/ui/src/app/components/public/stock/stock.component.scss
+++ b/ui/src/app/components/public/stock/stock.component.scss
@@ -337,6 +337,20 @@
       }
     }
 
+    &.loader  {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      span {
+        font: 500 22px/24px $fontMain;
+        text-align: center;
+        color: $background;
+      }
+    }
+
     &.privacy {
       position: absolute;
       width: 100%;
