--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -1,9 +1,26 @@
 @import "../../../../assets/styles/vars";
 
 .chart-wrapper {
+  position: relative;
   min-height: 100vh;
   width: 100%;
   padding-top: 52px;
+
+  .loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span {
+      font: 500 22px/24px $fontMain;
+      text-align: center;
+      color: $background;
+    }
+  }
+
   .chart {
     cursor: pointer;
     width: 100%;
@@ -12,6 +29,7 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+
     .chart-card {
       overflow: hidden;
       position: relative;
@@ -24,18 +42,21 @@
       border-radius: 14px;
       padding: 0 0 0 20px;
       background: radial-gradient(110.3% 95.84% at 56.25% 0%, #4C4C4C 0%, #333333 100%);
+
       &:hover {
         .cc-preview {
           .arrow {
             opacity: 1;
             right: -54px;
           }
+
           span {
             opacity: 1;
+
             &.take {
               top: calc(50% - 25px);
               right: 166px;
-              font: 900 42px/50px Roboto,sans-serif;
+              font: 900 42px/50px Roboto, sans-serif;
               font-style: italic;
             }
           }
@@ -48,6 +69,7 @@
         height: 90px;
         border-radius: 8px;
         border: 1px solid #525252;
+
         img {
           display: block;
           width: 100%;
@@ -62,6 +84,7 @@
         align-items: center;
         width: 260px;
         height: 100%;
+
         .row {
           width: 100%;
           height: 50%;
@@ -69,6 +92,7 @@
           display: flex;
           justify-content: flex-start;
           align-items: center;
+
           .name {
             position: absolute;
             width: 100%;
@@ -76,6 +100,7 @@
             font: 500 20px/22px $fontMain;
             color: #232323;
           }
+
           .album-size {
             position: absolute;
             right: 20px;
@@ -92,6 +117,7 @@
         flex: 1;
         width: 100%;
         height: 100%;
+
         .preview-block {
           filter: blur(69px);
           position: absolute;
@@ -102,10 +128,12 @@
           height: 100%;
           top: 0;
           left: 0;
+
           .preview-pix {
             width: 20%;
             height: 100%;
             overflow: hidden;
+
             img {
               width: 100%;
               height: 100%;
@@ -114,6 +142,7 @@
             }
           }
         }
+
         .arrow {
           opacity: 0;
           position: absolute;
@@ -122,22 +151,26 @@
           width: 200px;
           height: 100%;
           transition: right 200ms ease, opacity 200ms ease;
+
           span {
             height: 40px;
             display: block;
             position: absolute;
             border-radius: 20px;
             background: #2f2f2f;
+
             &:nth-child(1) {
               width: 100%;
               top: calc(50% - 20px);
             }
+
             &:nth-child(2) {
               width: 142px;
               right: -5px;
               top: calc(50% - 56px);
               transform: rotate(45deg);
             }
+
             &:nth-child(3) {
               width: 142px;
               right: -5px;
@@ -146,6 +179,7 @@
             }
           }
         }
+
         span {
           opacity: 0;
           display: block;
@@ -153,13 +187,15 @@
           font: 900 142px/166px $fontMain;
           color: #2f2f2f;
           transition: opacity 200ms ease;
+
           &.take {
             top: calc(50% - 25px);
             right: 200px;
             transition: right 200ms ease;
-            font: 900 42px/50px Roboto,sans-serif;
+            font: 900 42px/50px Roboto, sans-serif;
             font-style: italic;
           }
+
           &.look {
             top: calc(50% - 37px);
             right: -2px;
@@ -180,6 +216,7 @@
       .chart-card {
         height: 80px;
         padding: 0 0 0 12px;
+
         .cc-avatar {
           width: 60px;
           height: 60px;
@@ -187,11 +224,13 @@
 
         .cc-info-main {
           width: 140px;
+
           .row {
             .name {
               padding: 25px 0 0 20px;
               font: 900 16px/20px $fontMain;
             }
+
             .album-size {
               bottom: -46px;
               font: 900 44px/100px $fontMain;
@@ -203,16 +242,19 @@
           .arrow {
             width: 120px;
           }
+
           span {
             display: block;
             position: absolute;
             font: 900 142px/166px $fontMain;
             color: #2f2f2f;
+
             &.take {
               right: 70px;
               font: 900 22px/26px $fontMain;
               color: #8e8e8e;
             }
+
             &.look {
               font: 900 28px/30px $fontMain;
             }
