--- a/ui/src/app/components/main/stocks/stocks.component.scss
+++ b/ui/src/app/components/main/stocks/stocks.component.scss
@@ -9,6 +9,22 @@
   width: 400px;
   margin: 0 auto;
   padding-top: 52px;
+
+  .loader {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    span {
+      font: 500 22px/24px $fontMain;
+      text-align: center;
+      color: $background;
+    }
+  }
+
   .title {
     width: 100%;
     margin-top: 40px;
