--- a/ui/src/app/components/shared/sidebar/sidebar.component.scss
+++ b/ui/src/app/components/shared/sidebar/sidebar.component.scss
@@ -1,5 +1,15 @@
 @import "../../../../assets/styles/vars";
 
+.no-interaction-screen {
+  z-index: 99;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, .5);
+}
+
 .sidebar-item {
   overflow: hidden;
   overflow-y: auto;
@@ -13,9 +23,11 @@
   height: 100%;
   background-color: $dark;
   border-radius: 5px 0 0 5px;
+
   &.shadow {
     box-shadow: 0 3px 30px rgba(0, 0, 0, 0.3);
   }
+
   &:nth-last-child(2) {
     box-shadow: 0 3px 30px rgba(0, 0, 0, 0.3);
   }
