--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -87,10 +87,8 @@
     }
 
     h3.made-by {
-      position: fixed;
-      bottom: 55px;
       width: 360px;
-      margin: 20px 0;
+      margin: 20px 0 60px;
       font: 500 12px/16px $fontMain;
       color: $background;
       text-align: center;
