--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -232,7 +232,9 @@
 @media screen and (max-width: 750px) {
   .chart-wrapper {
     .chart {
+      padding: 0 20px;
       .chart-card {
+        width: 100%;
         height: 80px;
         padding: 0 0 0 12px;
 
