--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -5,6 +5,7 @@
   min-height: 100vh;
   width: 100%;
   padding-top: 52px;
+  padding-bottom: 40px;
 
   .loader {
     position: absolute;
@@ -123,9 +124,12 @@
           .name {
             position: absolute;
             width: 100%;
-            padding-left: 30px;
+            padding: 2px 6px;
+            margin: 5px 0px 0 0px;
+            border-radius: 0 6px 6px 0;
             font: 500 20px/22px $fontMain;
-            color: #232323;
+            color: $background;
+            background: #252525e3;
           }
 
           .album-size {
@@ -170,8 +174,7 @@
 
           .row {
             .name {
-              padding: 25px 0 0 20px;
-              font: 900 16px/20px $fontMain;
+              font: 500 16px/20px $fontMain;
             }
 
             .album-size {
