--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -94,6 +94,91 @@
     </div>
   </div>
 
+  <div class="block admin">
+    <div class="title">
+      <span>Admin</span>
+    </div>
+    <div class="box-col-double">
+      <div class="col col-one">
+        <div class="sub-title">
+          <span>Visible</span>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="1"
+              type="radio"
+              id="v-all"
+              name="privacyVisible"
+              formControlName="privacyVisible"
+            />
+            <label for="v-all">All</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="2"
+              type="radio"
+              id="v-authorized"
+              name="privacyVisible"
+              formControlName="privacyVisible"
+            />
+            <label for="v-authorized">Authorized</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="3"
+              type="radio"
+              id="v-nobody"
+              name="privacyVisible"
+              formControlName="privacyVisible"
+            />
+            <label for="v-nobody">Only me</label>
+          </div>
+        </div>
+      </div>
+      <div class="col col-two">
+        <div class="sub-title">
+          <span>Downloadable</span>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="1"
+              type="radio"
+              id="d-all"
+              value=0
+              name="privacyDownloadable"
+              formControlName="privacyDownloadable"
+            />
+            <label for="d-all">All</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="2"
+              type="radio"
+              id="d-authorized"
+              name="privacyDownloadable"
+              formControlName="privacyDownloadable"
+            />
+            <label for="d-authorized">Authorized</label>
+          </div>
+        </div>
+        <div class="row">
+          <div class="radio">
+            <input [value]="3"
+              type="radio"
+              id="d-nobody"
+              name="privacyDownloadable"
+              formControlName="privacyDownloadable"
+            />
+            <label for="d-nobody">Only me</label>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="block logout">
     <div class="button stroke login" (click)="logout()">
       <div class="btn-label">Logout</div>
