--- a/ui/src/assets/styles/vars.scss
+++ b/ui/src/assets/styles/vars.scss
@@ -1,5 +1,5 @@
 $fontMain: 'Roboto', sans-serif;
-$background: #4D4D4D;
+$background: #4d4d4d;
 $light: #949494;
 $dark: #252525;
 $gradient: radial-gradient(103.1% 103.1% at 47.74% 108.93%, #D400F7 18.23%, #FF3DC9 41.15%, #FFEA29 85.42%);
