--- a/ui/src/app/components/main/chart/chart.component.scss
+++ b/ui/src/app/components/main/chart/chart.component.scss
@@ -124,9 +124,8 @@
           .name {
             position: absolute;
             width: 100%;
-            padding: 5px 10px;
-            margin: 5px 0px 0 0px;
-            border-radius: 0 6px 6px 0;
+            padding: 5px 15px;
+            margin: 5px 0 0 0;
             font: 500 20px/22px $fontMain;
             color: $background;
             background: #252525e3;
@@ -174,7 +173,7 @@
 
           .row {
             .name {
-              padding: 2px 6px;
+              padding: 2px 10px;
               font: 500 16px/20px $fontMain;
             }
 
