--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -27,7 +27,9 @@
       <div class="panel-bot"
            *ngIf="controlsViewed"
       >
+        <div class="like"></div>
         <div class="number">{{viewerPix.num_current}} of {{viewerPix.num_total}}</div>
+        <div class="add">Add to ur stock</div>
       </div>
     </div>
   </div>
