--- a/ui/src/app/components/main/stocks/stocks.component.html
+++ b/ui/src/app/components/main/stocks/stocks.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="title">Stocks</div>
   <div class="sub-title">The space that bring all of the pix together.</div>
-  <div class="sub-title">Enjoy watching your collection or explore other users stocks - comment, like, save, download.</div>
+  <div class="sub-title">Enjoy watching your collection or explore other users stocks - like, save, download.</div>
   <div class="stock">
     <div class="stock-card self" (click)="goToStock(vkId)">
       <div class="logo"> </div>
