--- a/ui/src/app/components/main/stocks/stocks.component.scss
+++ b/ui/src/app/components/main/stocks/stocks.component.scss
@@ -109,7 +109,9 @@
 
 @media screen and (max-width: 750px) {
   .stock-wrapper {
-    width: 320px;
+    width: 100%;
+    max-width: 400px;
+    padding: 53px 20px 0;
     .sub-title {
       font: 400 18px/22px $fontMain;
     }
