UI viewer upd API new photo endpoints

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -133,6 +133,7 @@
   <app-viewer
     *ngIf="viewerOpened"
     [viewerPix]="viewerPix"
+    [selfStock]="selfStock"
     (close)="viewerClose()"
     (slideTo)="viewerSlide($event)"
   ></app-viewer>
