--- a/ui/src/app/components/shared/viewer/viewer.component.html
+++ b/ui/src/app/components/shared/viewer/viewer.component.html
@@ -27,12 +27,12 @@
       <div class="panel-bot"
            *ngIf="controlsViewed"
       >
-        <div class="pb left">
+        <div class="pb left" [ngClass]="{'self-stock': selfStock}">
           <div class="number">{{viewerPix.num_current}} of {{viewerPix.num_total}}</div></div>
-        <div class="pb right">
+        <div class="pb right" *ngIf="!selfStock">
           <div class="add" (click)="stealPix()">Steal PIX</div>
         </div>
-        <div class="like" (click)="likePix()"></div>
+        <div class="like" *ngIf="!selfStock" (click)="likePix()"></div>
       </div>
     </div>
   </div>
