--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -9,9 +9,11 @@
   padding: 20px 0;
   width: 100%;
   height: 100%;
+
   .block {
     margin-top: 40px;
     width: 100%;
+
     &:first-child {
       margin-top: 0;
     }
@@ -22,18 +24,21 @@
       align-items: center;
       flex-direction: column;
       position: relative;
+
       .user-avatar {
         display: block;
         width: 66px;
         height: 66px;
         border-radius: 33px;
         overflow: hidden;
+
         img {
           width: 100%;
           height: 100%;
           object-fit: cover;
         }
       }
+
       .user-name {
         margin-top: 20px;
         font: 400 18px/20px $fontMain;
@@ -53,6 +58,16 @@
       font: 400 16px/20px $fontMain;
       text-align: left;
       color: $background;
+
+      .loader {
+        margin-left: 20px;
+        width: 20px;
+        height: 20px;
+        background: url("../../../../../../assets/images/spinner.svg");
+        background-repeat: no-repeat;
+        background-position: 50%;
+        background-size: contain;
+      }
     }
 
     .sub-title {
@@ -70,6 +85,7 @@
       font: 400 14px/20px $fontMain;
       text-align: left;
       color: $background;
+
       &:first-child {
         margin-top: 0;
       }
@@ -146,6 +162,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
       .col {
         width: 50%;
       }
