UI viewer, menu upd

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -12,7 +12,7 @@
   <div class="block privacy">
     <div class="title">
       <span>Privacy settings</span>
-      <span class="loader" *ngIf="privacyLoader"></span>
+      <span class="loader"></span>
     </div>
     <div class="box-col-double">
       <div class="col col-one">
