--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -53,6 +53,9 @@
     }
 
     .title {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
       width: 100%;
       padding: 0 20px;
       font: 400 16px/20px $fontMain;
@@ -60,7 +63,8 @@
       color: $background;
 
       .loader {
-        margin-left: 20px;
+        display: block;
+        margin-left: 5px;
         width: 20px;
         height: 20px;
         background: url("../../../../../../assets/images/spinner.svg");
