API vk api version upd, small fixes

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -104,6 +104,26 @@
     </div>
   </div>
 
+  <div class="block extra-rights">
+    <div class="title">
+      <span>Additional tools</span>
+    </div>
+    <div class="row">
+      <div class="sub-title">
+        <span>Get extra tools</span>
+      </div>
+      <div class="button stroke login" (click)="logout()">
+        <div class="btn-label">Rights request</div>
+        <div class="btn-logo"> </div>
+      </div>
+    </div>
+    <div class="row" *ngIf="false">
+      <div class="sub-title">
+        <span>Save & Like</span>
+      </div>
+    </div>
+  </div>
+
   <div class="block logout">
     <div class="button stroke login" (click)="logout()">
       <div class="btn-label">Logout</div>
