API vk debug, UI menu WIP

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -115,7 +115,7 @@
           <span>Get extra tools</span>
         </div>
         <div class="row">
-          <div class="button stroke login" (click)="logout()">
+          <div class="button stroke login" (click)="requestRights()">
             <div class="btn-label">Rights request</div>
             <div class="btn-logo"> </div>
           </div>
