--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -49,7 +49,12 @@
 
     &.logout {
       position: absolute;
-      bottom: 0;
+      bottom: 40px;
+      padding: 0 20px;
+      .button {
+        margin: 0 auto;
+        width: 100%;
+      }
     }
 
     .title {
@@ -92,7 +97,7 @@
     .sub-title {
       width: 100%;
       padding: 0 20px;
-      margin-top: 20px;
+      margin-top: 10px;
       font: 400 14px/20px $fontMain;
       text-align: left;
       color: $background;
@@ -107,6 +112,11 @@
 
       &:first-child {
         margin-top: 0;
+      }
+
+      .button {
+        margin: 20px auto;
+        width: 100%;
       }
 
       .radio {
