API vk debug, UI menu WIP

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -112,7 +112,7 @@
     <div class="box-col">
       <div class="col col-100-per">
         <div class="sub-title">
-          <span>Get extra tools</span>
+          <span>Save and like</span>
         </div>
         <div class="row">
           <div class="button stroke login" (click)="requestRights()">
