--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -95,12 +95,26 @@
     }
 
     .sub-title {
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
       width: 100%;
       padding: 0 20px;
       margin-top: 10px;
       font: 400 14px/20px $fontMain;
       text-align: left;
       color: $background;
+
+      .done {
+        display: block;
+        margin-left: 5px;
+        width: 20px;
+        height: 20px;
+        mask-image: url("../../../../../../assets/images/check.svg");
+        background-color: #0aad2d;
+        mask-size: cover;
+        -webkit-mask-size: cover;
+      }
     }
 
     .row {
