UI menu WIP, save & like features test

--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.html
@@ -102,7 +102,7 @@
     <div class="box-col">
       <div class="col col-100-per">
         <div class="row">
-          <div class="button stroke login" (click)="requestRights()">
+          <div class="button stroke login" (click)="refreshUsers()">
             <div class="btn-label">Refresh users</div>
             <div class="btn-logo logo-reload"> </div>
           </div>
