UI menu WIP, save & like features test

--- a/ui/src/app/components/main/stocks/stocks.component.html
+++ b/ui/src/app/components/main/stocks/stocks.component.html
@@ -15,4 +15,7 @@
       <div class="subtitle">users chart</div>
     </div>
   </div>
+  <div class="tools" *ngIf="adTools">
+    <span>Additional tools activated!</span>
+  </div>
 </div>
