--- a/ui/src/app/components/main/stocks/stocks.component.scss
+++ b/ui/src/app/components/main/stocks/stocks.component.scss
@@ -104,6 +104,16 @@
       }
     }
   }
+
+  .tools {
+    width: 100%;
+    margin-top: 80px;
+    text-align: center;
+    span {
+      font: 400 16px/20px $fontMain;
+      color: $background;
+    }
+  }
 }
 
 
