--- a/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
+++ b/ui/src/app/components/shared/sidebar/content/menu/menu.component.scss
@@ -6,9 +6,10 @@
   justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  padding: 20px 0;
+  overflow-y: scroll;
+  padding: 20px 0 120px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 
   .block {
     margin-top: 40px;
