UI menu WIP, save & like features test

--- a/ui/src/app/components/public/stock/stock.component.html
+++ b/ui/src/app/components/public/stock/stock.component.html
@@ -14,8 +14,8 @@
       </div>
       <div class="user-info-main">
         <div class="name">{{stockUser.name}}</div>
-        <div class="album-size">{{stockUser.albumSize}}</div>
       </div>
+      <div class="user-info-album-size">{{stockUser.albumSize}}</div>
     </div>
     <div class="gallery">
       <div class="pixies" *ngIf="stockUser">
