UI save & like features test

--- a/ui/src/app/components/shared/header/header.component.scss
+++ b/ui/src/app/components/shared/header/header.component.scss
@@ -10,6 +10,7 @@ header {
   width: 100%;
   padding: 1px 0;
   background: #2a2a2af2;
+  box-shadow: 0 0 10px 0 #1d1d1d;
   transition: height 200ms ease-in-out;
 
   a.logo {
