UI save & like features test

--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -1,4 +1,10 @@
 <div class="auth-wrapper">
+  <div class="main" *ngIf="state === StateEnum.loading">
+    <div class="loader">
+      <span>Loading...</span>
+    </div>
+  </div>
+
   <div class="main" *ngIf="state === StateEnum.auth">
     <div class="logo">
       <div class="svg"></div>
