--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -6,6 +6,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+
   .main {
     position: fixed;
     display: flex;
@@ -16,10 +17,26 @@
     height: 100%;
     width: 100%;
 
+    .loader {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      span {
+        font: 500 22px/24px $fontMain;
+        text-align: center;
+        color: $background;
+      }
+    }
+
     .logo {
       position: relative;
       width: 100%;
       height: 300px;
+
       .svg {
         position: absolute;
         width: 100%;
@@ -29,6 +46,7 @@
         background-position: 50%;
         background-size: contain;
       }
+
       .juice {
         opacity: .42;
         position: absolute;
@@ -43,21 +61,27 @@
         background-size: contain;
         animation: scale-up-ver-top 4s linear infinite;
         animation-fill-mode: both;
+
         &.one {
           animation-delay: .2s;
         }
+
         &.two {
           animation-delay: .7s;
         }
+
         &.three {
           animation-delay: 1.4s;
         }
+
         &.four {
           animation-delay: 2.6s;
         }
+
         &.five {
           animation-delay: 3.2s;
         }
+
         &.six {
           animation-delay: 3.8s;
         }
@@ -121,8 +145,12 @@
 }
 
 @keyframes waterfall {
-  0% { background-position: 50% 0; }
-  100% { background-position: 50% 50px; }
+  0% {
+    background-position: 50% 0;
+  }
+  100% {
+    background-position: 50% 50px;
+  }
 }
 
 @keyframes scale-up-ver-top {
@@ -146,15 +174,18 @@
     .main {
       .logo {
         height: 200px;
+
         .pulsar {
           width: 156px;
           height: 156px;
           margin-left: -76px;
           margin-top: -72px;
         }
+
         .juice {
           bottom: -15px;
         }
+
         h1.title {
           width: 300px;
           font: 400 32px/34px $fontMain;
