--- a/ui/src/app/components/auth/auth.component.html
+++ b/ui/src/app/components/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="auth-wrapper">
-  <div class="main" *ngIf="state === StateEnum.auth">
+  <div class="main">
     <div class="logo">
       <div class="svg"></div>
       <div class="juice one"></div>
