--- a/ui/src/app/components/auth/auth.component.scss
+++ b/ui/src/app/components/auth/auth.component.scss
@@ -88,11 +88,21 @@
     }
 
     h2.subtitle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin-top: 60px;
       width: 345px;
+      height: 70px;
       font: 500 18px/24px $fontMain;
       color: $background;
       text-align: center;
+    }
+
+    .btn-bock {
+      width: 100%;
+      height: 44px;
+      margin: 40px auto;
     }
 
     h3.made-by {
